# penguins

./: .gitignore  Dockerfile  pyproject.toml
observations/: admin.py  api.py  models.py  sites.py
observations/migrations/: 0001_initial.py  0003_change_authuser_from_penguinuse_to_user.py
observations/static/css/: style.css
observations/templates/admin/observations/: change_list.html
observations/templates/admin/observations/camera/: detail.html
observations/templates/admin/observations/penguinuser/: change_list.html
observations/templates/admin/observations/site/: detail.html
observations/templates/admin/observations/video/: detail.html
penguins/: daterangefilter.py  settings.py  urls.py
penguins/templates/: help_page.html
penguins/templates/admin/: base.html  base_site.html  change_form.html  change_list.html  change_list_results.html  delete_confirmation.html  delete_selected_confirmation.html  index.html
penguins/templates/daterange_filter/: filter.html
