[tool.poetry]
name = "penguins"
version = "1.2.0"
description = "Department of Parks and Wildlife Little Penguins Observations application"
authors = ["Ashley Felton <ashley.felton@dbca.wa.gov.au>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
django = "4.2.11"
psycopg2-binary = "2.9.9"
dj-database-url = "2.1.0"
dj-static = "0.0.6"
django-extensions = "3.2.3"
django-leaflet = "0.29.0"
django-datetime-widget2 = "0.9.5"
python-dotenv = "1.0.1"
arrow = "1.3.0"
pyephem = "9.99 "
unicodecsv = "0.14.1"
psycopg2 = "2.9.9"
django-storages = {version = "1.14.2", extras = ["azure"]}
gunicorn = "21.2.0"
dbca-utils = "2.0.2"

[tool.poetry.group.dev.dependencies]
ipython = "5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
